separated paragraph shadow from image shadow

--- a/all-block-styles.css
+++ b/all-block-styles.css
@@ -7,7 +7,7 @@
 	padding: 16px;
 }
 
-.is-style-slug-shadow {
+p.is-style-slug-shadow {
 	box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2);
 	padding: 16px;
 }
